--- a/src/components/header.css
+++ b/src/components/header.css
@@ -15,14 +15,22 @@ input {
   width: 90%;
   padding: 1.5rem 0rem;
   margin-left: 2rem;
-  /* padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 7rem;
-    padding-right: 1rem; */
   border: none;
   outline: none;
   font-size: 1rem;
 }
 input::placeholder {
   font-size: 1rem;
+}
+@media (max-width: 768px) {
+  form.search-box {
+    width: 80%;
+  }
+
+  input {
+    width: 70%;
+    margin-left: 1rem;
+  }
+  
+  
 }
